<resources>
    <string name="app_name">Semana06Fragments</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_principal">Principal</string>
    <string name="menu_registro">Registro</string>
    <string name="menu_musica">Musica</string>
    <string name="tittle_principal">Fragmentos de android</string>
    <string name="varbtmale">Male</string>
    <string name="varbtfemale">Female</string>
    <string name="varbtother">Other</string>
    <string name="varchklicence">Licence?</string>
    <string name="varchkcar">Car?</string>
    <string name="varbtnsave">SAVE</string>

    <string-array name="country_array">
        <item>Brasil</item>
        <item>Argentina</item>
        <item>Colombia</item>
        <item>Uruguay</item>
        <item>Ecuador</item>
        <item>Venezuela</item>
        <item>Chile</item>
        <item>Peru</item>
        <item>Bolivia</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>